--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webserverhw2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/**/*.js --fix"
   },
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/jvesche20/WebServerHW2#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bob-mongoose-currency": "^0.2.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
