--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bob-mongoose-currency": "^0.2.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "http-status-codes": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
